--- a/studikasus.html
+++ b/studikasus.html
@@ -237,6 +237,27 @@
 
       <br>
 
+      
+      <!-- Bab - 3 -->
+      <h4 class="text-center"><b>BAB III<br>HASIL DAN PEMBAHASAN</b></h4><br>
+      <!--Plan (Perencanaan)-->
+      <h5><b>3.1	Perencanaan <i>(Plan)</i></b></h5>
+      <div class="text-justify">
+        <p style="text-indent: 0.35in;">Penerapan metode DevOps dalam membuat aplikasi ini diawali dengan tahap perencanaan yaitu pengumpulan kebutuhan dengan membuat rencana tentang kebutuhan dari perangkat lunak yang akan dibuat, adapun penjelasan dan tahapan dari pengumpulan data dijelaskan sebagai berikut :<br>
+
+        <ol>A.	Observasi<br>
+          Pada tahapan ini, dilakukan observasi secara langsung pada PT Konveksi Jaya bagaimana selama ini petugas gudang melakukan pencatatan data barang, dan melihat admin mengelola data persediaan barang  serta beberapa fenomena yang ada pada objek penelitian, hasilnya adalah penulis menemukan permasalahan permasalahan yang sudah penulis tulis sebelumnya, dan dari observasi ini pula penulis menyimpulkan bahwa perusahaan membutuhkan sebuah sistem informasi persediaan barang berbasis web untuk menyelesaikan permasalahan tersebut.</ol>
+        <ol>B.	Wawancara<br>
+          Setelah menemukan permasalahan yang ada pada tahap observasi berikutnya penulis melakukan wawancara kepada petugas gudang, admin ataupun pimpinan dari perusahan, hal ini dilakukan untuk mencari solusi dan mendengarkan kebutuhan dari perusahaan terkait sistem informasi yang akan dibuat.</ol>
+
+        <ol>C.	Studi Pustaka <br>
+          Metode Studi Pustaka Metode pengumpulan data dalam studi pustaka, penulis melakukan studi dari beberapa buku, e-book, e-journal dan modul pembelajaran yang terkaitan erat dengan penulisan perancangan sistem ini.</ol>
+        </p>
+        <p style="text-indent: 0.35in;">Pada tahapan perencanaan juga dilakukan rancangan mulai desain sistem, hingga desain database serta desain user interface. Desain sistem meliputi Desain Diagram Jenjang, Data Flow Diagram (DFD),  Entity Relationship Diagram (ERD), dan Desain Database terdapat Desain Relasi Database serta Desain User Interface untuk rancangan tampilan sistem. </p>
+      </div>
+
+      <br>
+
 
     </div>
 
