--- a/studikasus.html
+++ b/studikasus.html
@@ -258,6 +258,30 @@
 
       <br>
 
+       <!-- 3.1.1	Kebutuhan Fungsional -->
+       <h5><b>3.1.1	Kebutuhan Fungsional</b></h5>
+       <div class="text-justify">
+         <p>Kebutuhan sistem mendefinisikan hal-hal yang dibutuhkan oleh sistem yang akan dibangun antara lain :<br>
+           1.	Kemampuan untuk dapat mengelola data user atau akun, data supplier, data master barang yang meliputi data barang, jenis barang, satuan barang, data transakasi yaitu barang masuk serta barang keluar, dan data laporan barang masuk dan keluar, pada setiap user yang memiliki level akses yang berbeda-beda.<br>
+           2.	Kemampuan untuk menampilkan seluruh rincian barang yang tersedia pada sistem persediaan barang dan mencari data barang termasuk transaksi data barang masuk serta keluar.<br>
+           3.	Halaman beranda, menu halaman untuk mengelola data supplier, master barang, transakasi, laporan.<br>
+           4.	Cetak laporan barang masuk dan keluar.
+         </p>
+       </div>
+         
+       <br>
+ 
+       <!-- 3.1.2	Kebutuhan Non Fungsional -->
+       <h5><b>3.1.2	Kebutuhan Non - Fungsional</b></h5>
+       <div class="text-justify">
+         <p>Perangkat lunak yang digunakan untuk membangun aplikasi : <br>
+           1.	Tools & Sofware : Xampp, VScode, Framework Bootstrap, CodeIgniter, dan Adobe XD.<br>
+           2.	Sistem Operasi  : Windows 10 64bit
+         </p>
+       </div>
+         
+       <br>
+
 
     </div>
 
